--- a/DataScience/L09_1_1.ipynb
+++ b/DataScience/L09_1_1.ipynb
@@ -370,6 +370,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training, Test\n",
+    "Regularization: lambda, loss 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
